--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="half">
           <h2>Table of Contents</h2>
           <ul>
-              <li>01<a href="#prologue" class="scroll" title="Scroll to Prologue">Prologue</a></li>
+              <li><em>01</em><a href="#prologue" class="scroll" title="Scroll to Prologue">Prologue</a></li>
               <li><em>02</em> <a href="#insight1" class="scroll" title="Scroll to Acknowledgements">Acknowledgements</a></li>
               <li><em>03</em> <a href="#insight2" class="scroll" title="Scroll to Introduction">Introduction</a></li>
               <li><em>04</em> <a href="#insight3" class="scroll" title="Scroll to General IDB Group Review">General IDB Group Review</a></li>
