--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
         
     <div class="section" id="home">
+        <a class="logo" href="https://publications.iadb.org/handle/11319/7496?locale-attribute=en&" title="Visit the IDB Group-Civil Society Review 2016-2017"><span>IDB Group-Civil Society Engagement Review 2016-2017</span></a>
         <h1>IDB Group-Civil Society Engagement Review 2016-2017</h1>
         <p class="credit">
              Publication researched, created and<br> webpage developed by <a href="www.linkedin.com/in/viviane-espinoza" target="_blank" title="Visit Viviane's Linkedin">Viviane Espinoza</a>
@@ -43,6 +44,7 @@
             <h4>VIVIANE ESPINOZA</h4>
         </a>
         <div class="half">
+            <br><br><br><br><br><br><br><br>
             <h4>Prologue</h4>
             <h2>A Changing Region</h2>
             <p>
@@ -70,7 +72,7 @@
         <div class="half">
           <h2>Table of Contents</h2>
           <ul>
-              <li><em>01</em><a href="#prologue" class="scroll" title="Scroll to Prologue">Prologue</a></li>
+              <li><em>01</em> <a href="#prologue" class="scroll" title="Scroll to Prologue">Prologue</a></li>
               <li><em>02</em> <a href="#insight1" class="scroll" title="Scroll to Acknowledgements">Acknowledgements</a></li>
               <li><em>03</em> <a href="#insight2" class="scroll" title="Scroll to Introduction">Introduction</a></li>
               <li><em>04</em> <a href="#insight3" class="scroll" title="Scroll to General IDB Group Review">General IDB Group Review</a></li>
@@ -109,19 +111,19 @@
         <div class="half">
            <h4>Introduction</h4>
             <h2>Scope, Reach & Impact</h2>
-            <p>This second review under the leadership of the Vice President for Countries, Alexandre Meira da Rosa, looks to clarify the scope, reach and impact of the work of the different Bank sectors, departments, divisions and units conduct with CS, as well as to optimize the use of resources available. These actions can be summarized in:</p> 
-            <p>• Include CS as part of a set of innovative solutions for effectively addressing development challenges identified by the Bank by incorporating human capital with technically prepared Civil Society Organizations (CSO);
-            • Increase added value in a regional thematic roundtable in order to build knowledge during regional meetings, with a view to prepare common agendas on development challenges identified in the Region.</p>  
-            <p>At a regional level, Civil Society Consultative Groups (ConSoc) continued to be strengthened in all 26 countries. These groups represent an invaluable network of collaboration and direct interaction with the Bank in the form of technical and territorial perspectives and experiences.  
+            <p>This second review under the leadership of the Vice President for Countries, Alexandre Meira da Rosa, looks to clarify the scope, reach and impact of the work of the different Bank sectors, departments, divisions and units conduct with CS, as well as to optimize the use of resources available. These actions can be summarized in:<br><br> 
+            • Include CS as part of a set of innovative solutions for effectively addressing development challenges identified by the Bank by incorporating human capital with technically prepared Civil Society Organizations (CSO);
+            • Increase added value in a regional thematic roundtable in order to build knowledge during regional meetings, with a view to prepare common agendas on development challenges identified in the Region.<br><br>  
+            At a regional level, Civil Society Consultative Groups (ConSoc) continued to be strengthened in all 26 countries. These groups represent an invaluable network of collaboration and direct interaction with the Bank in the form of technical and territorial perspectives and experiences.<br><br>  
             </p>
         </div>
 
         <div class="half second" id="insight2">
             <h4></h4>
             <h2></h2>
-            <br><p>Also, the annual regional meetings ‘’IDB Group–Civil Society Caribbean Forum’’ and ‘’IDB Group-Civil Society Regional Forum’’ were  reinforced and executed in Trinidad and Tobago and the Dominican Republic (2016) and in Jamaica and Bolivia (2017) and respectively. These meetings include the participation of CSO leaders, experts on different fields and sector, and Bank specialist to explore opportunities for joint solutions.</p>  
-            <p>The previous considerations explain the need for a biennial review that helps to better understand the IDB Group’s level of engagement with Civil Society, draw lessons learned and to coordinate the Bank’s future actions. Note that the review supports and highlights the work of IDB Group Civil Society in each of the 26 borrowing member countries of the region: Argentina, Bahamas, Barbados, Belize, Bolivia, Brazil, Chile, Colombia, Costa Rica, Dominican Republic, Ecuador, El Salvador, Guatemala, Guyana, Haiti, Honduras, Jamaica, Mexico, Nicaragua, Panama, Paraguay, Peru, Suriname, Trinidad and Tobago, Uruguay and Venezuela. 
-            </p>
+            <br><p>Also, the annual regional meetings ‘’IDB Group–Civil Society Caribbean Forum’’ and ‘’IDB Group-Civil Society Regional Forum’’ were also reinforced and executed in Trinidad and Tobago and the Dominican Republic (2016) and in Jamaica and Bolivia (2017) and respectively. These meetings include the participation of CSO leaders, experts on different fields and sector, and Bank specialist to explore opportunities for joint solutions.<br><br>  
+            The previous considerations explain the need for a biennial review that helps to better understand the IDB Group’s level of engagement with Civil Society, draw lessons learned and to coordinate the Bank’s future actions. Note that the review supports and highlights the work of IDB Group Civil Society in each of the 26 borrowing member countries of the region: Argentina, Bahamas, Barbados, Belize, Bolivia, Brazil, Chile, Colombia, Costa Rica, Dominican Republic, Ecuador, El Salvador, Guatemala, Guyana, Haiti, Honduras, Jamaica, Mexico, Nicaragua, Panama, Paraguay, Peru, Suriname, Trinidad and Tobago, Uruguay and Venezuela. 
+            <br>
             <div class="share">
             <a class="twitter" href="https://publications.iadb.org/handle/11319/7496?locale-attribute=en&" title="Tweet about the IDB Group-Civil Society Engagement Review 2016-2017" target="_blank"><span>Tweet</span></a>
 
@@ -229,7 +231,7 @@
             <p>
               <a href="mailto:viespinoza@gmail.com" target="_blank" title="Send us an email">viespinoza@gmail.com</a><br>
               (202) 279-0605<br>
-              <p>&copy; 2018 Viviane Espinoza</p>
+              <em>&copy; 2018 Viviane Espinoza</em>
             </p>
         </div>
         <div class="half second">
