--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="half second">
             <h3></h3>
             <div>
-            <img class="image" src="images/ForoDR.JPG" alt="Foro DR" height="300" width="450">
+            <!--<img class="image" src="images/ForoDR.JPG" alt="Foro DR" height="300" width="450">-->
 
             </div>
         </div>
