--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
 <body id="BodyBack">
     <section id="fxd">
-        <a class="logo" href="https://publications.iadb.org/handle/11319/7496?locale-attribute=en&">
+        <a class="logo" href="https://publications.iadb.org/handle/11319/8936" target="_blank">
         <h4>Download the Review</h4>
        </a>
     </section>
         
     <section class="section" id="home">
-        <a class="logo" href="https://publications.iadb.org/handle/11319/7496?locale-attribute=en&" title="Visit the IDB Group-Civil Society Review 2016-2017"><span>IDB Group-Civil Society Engagement Review 2016-2017</span></a>
+        <a class="logo" href="https://publications.iadb.org/handle/11319/8936" title="Visit the IDB Group-Civil Society Review 2016-2017" target="_blank"><span>IDB Group-Civil Society Engagement Review 2016-2017</span></a>
         <h1>IDB Group-Civil Society Engagement Review 2016-2017</h1>
         <p class="credit">
              Publication researched, created and<br> webpage developed by <a href="https://www.linkedin.com/in/viviane-espinoza/" target="_blank" title="Visit Viviane's Linkedin">Viviane Espinoza</a>
@@ -72,7 +72,7 @@
                 <li>Strategic <span class="strong"> partnerships</span> with Civil Society. </li>
             </ul>
 
-            <p>We hope you find the IDB-Civil Society Engagement Review 2016-2017 insightful and download the full report <a href="https://publications.iadb.org/handle/11319/7496?locale-attribute=en&locale-attribute=es&" target="_blank">here</a>.</p>
+            <p>We hope you find the IDB-Civil Society Engagement Review 2016-2017 insightful and download the full report <a href="https://publications.iadb.org/handle/11319/8936" target="_blank">here</a>.</p>
             
             <p class="strong">Viviane Espinoza</p>
             Civil Society Programs Coordinator</br>
@@ -206,10 +206,10 @@
         <div class="half">
             <h4>Methodology</h4>
             <h2 class="clean">About The Report</h2>
-            <p>A. CONCEPTUALIZATION OF THE LEVELS OF ENGAGEMENT: The Bank has gained experience and enriched its activities thanks to the bulk of lessons learned during its operating and sector-based activities and the generation of knowledge. As mentioned earlier, in order to systematize the many experiences and lessons learned, the Bank’s actions with Civil Society have been methodologically analyzed from five different levels of engagement: information, dialogues, consultations, collaboration and partnerships.</p>
-            <p>B. INFORMATION PROCESSING: The information in this review comes from the work conducted in the 26 countries and systematized in accordance with the actions pertaining to each strategic level.</p>  
-            </p>C. NATURE AND SCOPE OF THE REVIEW: This exercise reflects the work conducted by the Bank in conjunction with Civil Society. This new edition seeks to guide the work in terms of the financial and human resources available. However, this review does not constitute a detailed account of all the projects, programs and activities that involve Civil Society participation in one or more levels of engagement (see the chart “Engagement Level by Activity”). Instead, its goal is to provide an initial insight to promote the measurement of the added value of such actions for the future development of activities and engagement with Civil Society.</p>
-            </p>D. CONTEXTUAL ANALYSIS OF THE INFORMATION BY COUNTRY: This review is to be understood in context and not as a comparison between countries. The reason is that individual country activities are dependent upon the volume of operations and the impact of external and internal factors that result, among other causes, from changes in work teams and their short-term impact on CS-related topics. Also, by definition each country has a context and identity of its own that determine the interaction between the three main actors, which varies significantly from country to country. Accordingly, each Country Office is taking the steps needed to comply more efficiently with the Country Strategy agreed to with the respective government, promoting opportunities for development by incorporating CSOs that can contribute specific local and technical knowledge, if deemed pertinent.</p>
+            <p><span class="strong">CONCEPTUALIZATION OF THE LEVELS OF ENGAGEMENT:</span> The Bank has gained experience and enriched its activities thanks to the bulk of lessons learned during its operating and sector-based activities and the generation of knowledge. As mentioned earlier, in order to systematize the many experiences and lessons learned, the Bank’s actions with Civil Society have been methodologically analyzed from five different levels of engagement: information, dialogues, consultations, collaboration and partnerships.</p>
+            <p><span class="strong">INFORMATION PROCESSING:</span> The information in this review comes from the work conducted in the 26 countries and systematized in accordance with the actions pertaining to each strategic level.</p>  
+            </p><span class="strong">NATURE AND SCOPE OF THE REVIEW:</span> This exercise reflects the work conducted by the Bank in conjunction with Civil Society. This new edition seeks to guide the work in terms of the financial and human resources available. However, this review does not constitute a detailed account of all the projects, programs and activities that involve Civil Society participation in one or more levels of engagement (see the chart “Engagement Level by Activity”). Instead, its goal is to provide an initial insight to promote the measurement of the added value of such actions for the future development of activities and engagement with Civil Society.</p>
+            </p><span class="strong">CONTEXTUAL ANALYSIS OF THE INFORMATION BY COUNTRY:</span> This review is to be understood in context and not as a comparison between countries. The reason is that individual country activities are dependent upon the volume of operations and the impact of external and internal factors that result, among other causes, from changes in work teams and their short-term impact on CS-related topics. Also, by definition each country has a context and identity of its own that determine the interaction between the three main actors, which varies significantly from country to country. Accordingly, each Country Office is taking the steps needed to comply more efficiently with the Country Strategy agreed to with the respective government, promoting opportunities for development by incorporating CSOs that can contribute specific local and technical knowledge, if deemed pertinent.</p>
         </div>
     </div>
 
